--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/ssr": "^0.6.1",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.37.1",
+    "javascript-time-ago": "^2.5.11",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
